--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>glorona</groupId>
-    <artifactId>EDDProyectoG4</artifactId>
+    <artifactId>EDDProyectoGLRC</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -36,7 +36,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>glorona.eddproyectog4.App</mainClass>
+                    <mainClass>ComponentesApp.App</mainClass>
                 </configuration>
                 <executions>
                     <execution>
